--- a/src/Components/Common/Autocomplete.scss
+++ b/src/Components/Common/Autocomplete.scss
@@ -1,30 +1,33 @@
+@import "../../Utils/Colors";
+
 .autocomplete-tag {
   display: flex;
   width: fit-content;
   height: fit-content;
   flex: 0 0 auto;
-  color: white;
-  background: #154360;
+  color: $white;
+  background: $gray4;
   border-radius: 4px;
   font-size: 12px;
   padding: 3px 5px;
   margin: 5px 10px 0 0;
-  animation: fade-in 200ms ease-in;
+  animation: fade-in 200ms $transition;
   cursor: pointer;
   align-items: center;
 }
 
 .autocomplete-remove {
-  padding-left: 2px;
-  margin-left: 6px;
-  box-shadow: -1px 0 rgba(255, 255, 255, 0.25);
+  padding-left: 4px;
+  margin-left: 8px;
+  box-shadow: -1px 0 $gray3;
+  color: $gray2;
 }
 
 .autocomplete-row {
   display: flex;
   flex: 1;
-  background-color: white;
-  transition: background-color 200ms ease;
+  background-color: $white;
+  transition: background-color 200ms $transition;
   padding: 10px;
   cursor: pointer;
 
@@ -42,18 +45,18 @@
 
   &.hovering,
   &:hover {
-    background-color: #85c1e9;
-    transition: background-color 200ms ease;
+    background-color: $blue2;
+    transition: background-color 200ms $transition;
   }
 }
 
 .autocomplete-row-selected {
-  background-color: #7dcea0;
-  transition: background-color 200ms ease;
+  background-color: $green2;
+  transition: background-color 200ms $transition;
 
   &:hover {
-    background-color: #f1948a;
-    transition: background-color 200ms ease;
+    background-color: $red2;
+    transition: background-color 200ms $transition;
   }
 }
 
@@ -65,12 +68,12 @@
   right: 0;
   padding: 10px;
   justify-content: center;
-  background-color: white;
+  background-color: $white;
   border-radius: 2px 2px 15px 15px;
   height: 200px;
   overflow-y: auto;
-  animation: fade-in 200ms ease-in;
-  box-shadow: 0 0 4px rgba(#1b4f72, 0.65);
+  animation: fade-in 200ms $transition;
+  box-shadow: 0 0 4px rgba($gray3, 0.65);
 
   &::-webkit-scrollbar {
     display: none;
@@ -80,7 +83,7 @@
 .autofill-input {
   display: flex;
   flex-grow: 1;
-  transition: width 200ms ease;
+  transition: width 200ms $transition;
 }
 
 .rendered-values-container {
