--- a/src/Components/DisplayGraph/ContextMenu.scss
+++ b/src/Components/DisplayGraph/ContextMenu.scss
@@ -1,13 +1,15 @@
+@import "../../Utils/Colors";
+
 .context-menu-container {
   display: flex;
   flex-direction: column;
   position: fixed;
   z-index: 10;
-  background: #394b59;
-  color: white;
+  background: $gray4;
+  color: $white;
   border-radius: 3px;
   width: 130px;
-  animation: fade-in 200ms ease-in;
+  animation: fade-in 200ms $transition;
   padding-bottom: 5px;
 }
 
@@ -16,19 +18,19 @@
   font-size: 16px;
   padding: 5px;
   font-weight: bold;
-  background: #34495e;
+  background: $gray3;
 }
 
 .context-menu-option {
   display: flex;
   align-items: center;
   padding: 5px 0;
-  transition: background-color 200ms ease-in;
+  transition: background-color 200ms $transition;
   cursor: pointer;
 }
 
 .context-menu-option:hover {
-  background-color: #7d6608;
+  background-color: $gold5;
 }
 
 .context-menu-icon {
