--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,3 +1,5 @@
+@import "../../Utils/Colors";
+
 .navbar-button {
   margin: 0 5px;
 }
@@ -13,9 +15,9 @@
   top: 0;
   left: 0;
   bottom: 0;
-  background: #283747;
+  background: $gray4;
   width: 50px;
-  transition: width 200ms ease-in-out;
+  transition: width 200ms $transition;
 }
 
 .atlas-navbar.hover {
@@ -31,5 +33,5 @@
   display: flex;
   height: 1px;
   margin: 0 5px;
-  background: rgba(255, 255, 255, 0.5);
+  background: $gray2;
 }
