--- a/src/Utils/Colors.scss
+++ b/src/Utils/Colors.scss
@@ -36,4 +36,12 @@ $gold3: #f1c40f;
 $gold4: #b7950b;
 $gold5: #7d6608;
 
+$orange1: #fae5d3;
+$orange2: #f0b27a;
+$orange3: #e67e22;
+$orange4: #af601a;
+$orange5: #784212;
+
+$black: #17202a;
+
 $transition: cubic-bezier(0.87, 0.1, 0.36, 1);
