Sort of fixes some autocomplete issues

--- a/src/Components/Common/Autocomplete.scss
+++ b/src/Components/Common/Autocomplete.scss
@@ -45,8 +45,15 @@
 
   &.hovering,
   &:hover {
-    background-color: $blue2;
     transition: background-color 200ms $transition;
+  }
+
+  &.hovering {
+    background-color: $blue2;
+  }
+
+  &:hover {
+    background-color: $blue1;
   }
 }
 
