--- a/src/Components/Dialogs/EditUser.scss
+++ b/src/Components/Dialogs/EditUser.scss
@@ -1,3 +1,5 @@
+@import "../../Utils/Colors";
+
 .edit-user-title {
   display: flex;
   align-items: center;
@@ -6,4 +8,34 @@
 .edit-user-tooltip-helper {
   margin-left: 10px;
   margin-top: 5px;
+}
+
+.edit-user-dialog-body {
+  display: flex;
+  flex: 1;
+  padding: 5px 20px;
+}
+
+.edit-user-form-group {
+  flex: 1;
+}
+
+.edit-user-header {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  color: $light-gray4;
+}
+
+.edit-user-frequency {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding-bottom: 10px;
+
+  .slider-container {
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
+  }
 }
