--- a/src/Components/Navbar/NavbarComponents/Filters/Filters.scss
+++ b/src/Components/Navbar/NavbarComponents/Filters/Filters.scss
@@ -122,8 +122,9 @@ $filter-height: 25px;
 .filters-categories {
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex: 1;
   padding-top: 10px;
-  padding-left: 5px;
 }
 
 .filters-category-text {
@@ -133,4 +134,15 @@ $filter-height: 25px;
 
 .filter-ignore-list-helper {
   max-width: 250px;
+}
+
+.filters-frequency-range-slider {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  margin-top: 70px;
+
+  .bp3-slider-track {
+    width: 12px;
+  }
 }
