--- a/src/Components/Navbar/NavbarComponents/Filters/Filters.scss
+++ b/src/Components/Navbar/NavbarComponents/Filters/Filters.scss
@@ -122,8 +122,9 @@ $filter-height: 25px;
 .filters-categories {
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex: 1;
   padding-top: 10px;
-  padding-left: 5px;
 }
 
 .filters-category-text {
@@ -131,6 +132,17 @@ $filter-height: 25px;
   margin-bottom: 2px;
 }
 
-.filter-ignore-list-helper {
+.filter-frequency-helper {
   max-width: 250px;
+}
+
+.filters-frequency-text {
+  color: $white;
+}
+
+.filters-frequency-range-slider {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  margin-top: 70px;
 }
